# opengl-tutorial

./: .gitignore  CMakeLists.txt
3rd/glad/: glad.c  glad.h
cmake/: gamut.cmake  gamutTexture.cmake  lut3d.cmake
src/common/: common.h  shader.cpp  shader.h
src/gamut/: main.cpp
src/gamutTexture/: gamutTexture.cpp  main.cpp
src/lut3d/: lut3d.cpp
src/shaders/gamut/: vshader.glsl
src/shaders/gamutTexture/: fshader.glsl  vshader.glsl
src/shaders/lut3d/: fshader.glsl  vshader.glsl
